# tic-tac-toe-haskell

./: Makefile  ttt-haskell.cabal
src/TTT/: Board.hs
test/TTT/: BoardSpec.hs
