name:                ttt-haskell
version:             0.1.0.0
synopsis:            TicTacToe in Haskell
homepage:            https://github.com/mylesmegyesi/ttt-haskell
license:             MIT
author:              Myles Megyesi
maintainer:          myles.megyesi@gmail.com
category:            Learning
build-type:          Simple
cabal-version:       >=1.8

executable ttt-haskell
  main-is:
    Main.hs

  build-depends:
    base == 4.6.*

  hs-source-dirs:
    src

executable spec
  main-is:
    Spec.hs

  hs-source-dirs:
    src,
    test

  build-depends:
    base == 4.6.*,
    hspec == 1.11.3,
    hlint == 1.9.4
